--- a/app/src/main/res/layout/activity_registrar_estudiantes.xml
+++ b/app/src/main/res/layout/activity_registrar_estudiantes.xml
@@ -17,7 +17,7 @@
         android:background="@drawable/round_button_background"
         android:backgroundTint="@color/white"
         android:fontFamily="sans-serif-medium"
-        android:text="BotonCrear"
+        android:text="Crear Cuenta"
         android:textAlignment="center"
         android:textColor="@color/purple_700"
         android:textSize="14sp"
@@ -42,7 +42,7 @@
         android:layout_marginBottom="4dp"
         android:backgroundTint="#132BFF"
         android:hint="Nombre"
-        android:inputType="number"
+        android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/texto15"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
         android:layout_marginBottom="536dp"
         android:backgroundTint="#132BFF"
         android:hint="Primer apellido"
-        android:inputType="number"
+        android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.727"
@@ -69,7 +69,7 @@
         android:layout_marginBottom="468dp"
         android:backgroundTint="#132BFF"
         android:hint="Segundo apellido"
-        android:inputType="number"
+        android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.688"
@@ -82,7 +82,7 @@
         android:layout_marginBottom="404dp"
         android:backgroundTint="#132BFF"
         android:hint="Carnet"
-        android:inputType="number"
+        android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.727"
@@ -95,7 +95,7 @@
         android:layout_marginBottom="272dp"
         android:backgroundTint="#132BFF"
         android:hint="Correo"
-        android:inputType="number"
+        android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.74"
@@ -108,7 +108,7 @@
         android:layout_marginBottom="140dp"
         android:backgroundTint="#132BFF"
         android:hint="Sede"
-        android:inputType="number"
+        android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.727"
@@ -121,7 +121,7 @@
         android:layout_marginEnd="21dp"
         android:backgroundTint="#132BFF"
         android:hint="Descripción"
-        android:inputType="number"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/texto23" />
 
@@ -132,7 +132,7 @@
         android:layout_marginBottom="204dp"
         android:backgroundTint="#132BFF"
         android:hint="Carrera"
-        android:inputType="number"
+        android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.688"
@@ -145,7 +145,7 @@
         android:layout_marginBottom="340dp"
         android:backgroundTint="#132BFF"
         android:hint="**********"
-        android:inputType="number"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.727"
