--- a/app/src/main/res/layout/activity_propuesta.xml
+++ b/app/src/main/res/layout/activity_propuesta.xml
@@ -70,7 +70,7 @@
         android:layout_marginEnd="39dp"
         android:backgroundTint="#132BFF"
         android:hint="Temática"
-        android:inputType="number"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,9 +85,9 @@
         android:layout_marginEnd="39dp"
         android:backgroundTint="#132BFF"
         android:hint="Objetivo"
-        android:inputType="number"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -100,9 +100,9 @@
         android:layout_marginEnd="39dp"
         android:backgroundTint="#132BFF"
         android:hint="Actividades a realizar"
-        android:inputType="number"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -115,7 +115,7 @@
         android:layout_marginEnd="39dp"
         android:backgroundTint="#132BFF"
         android:hint="Fecha sugerida"
-        android:inputType="number"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
