--- a/app/src/main/res/layout/activity_gestionar_actividad.xml
+++ b/app/src/main/res/layout/activity_gestionar_actividad.xml
@@ -56,9 +56,10 @@
             android:id="@+id/spinnerHoraI"
             android:layout_width="350dp"
             android:layout_height="50dp"
-            android:prompt="@string/choose_time"
             android:background="@drawable/spinner_background"
+            android:prompt="@string/choose_time"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.508"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewHoraI" />
 
