--- a/app/src/main/res/drawable/round_button_background.xml
+++ b/app/src/main/res/drawable/round_button_background.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!-- res/drawable/round_button_background.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#0C25A6" /> <!-- Color de fondo del botón -->
