--- a/app/src/main/res/layout/activity_calendario_eventos.xml
+++ b/app/src/main/res/layout/activity_calendario_eventos.xml
@@ -147,177 +147,41 @@
             android:orientation="horizontal"></LinearLayout>
     </HorizontalScrollView>
 
-    <!-- VerticalScrollView para las horas -->
-    <ScrollView
+    <!-- HorizontalScrollView para las horas -->
+    <HorizontalScrollView
         android:id="@+id/hourScrollView"
-        android:layout_width="376dp"
-        android:layout_height="463dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:background="@drawable/scrollview_background"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dayScrollView">
 
-        <RelativeLayout
+        <!-- Contenedor para la fila de horas -->
+        <LinearLayout
+            android:id="@+id/hourLinearLayout"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"></LinearLayout>
+    </HorizontalScrollView>
 
-            <!-- Columna de horas -->
-            <LinearLayout
-                android:id="@+id/hourLinearLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+    <!-- VerticalScrollView para las horas -->
+    <ScrollView
+        android:id="@+id/eventScrollView"
+        android:layout_width="wrap_content"
+        android:layout_height="389dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/hourScrollView">
 
-                <!-- Agregar botones o texto para las horas aquí -->
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/textview_background"
-                    android:text="08:00"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" /> <!-- Añadir margen inferior para separación -->
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/textview_background"
-                    android:text="09:00"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" /> <!-- Añadir margen inferior para separación -->
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/textview_background"
-                    android:text="10:00"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" /> <!-- Añadir margen inferior para separación -->
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/textview_background"
-                    android:text="11:00"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" /> <!-- Añadir margen inferior para separación -->
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/textview_background"
-                    android:text="12:00"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" /> <!-- Añadir margen inferior para separación -->
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/textview_background"
-                    android:text="13:00"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" /> <!-- Añadir margen inferior para separación -->
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/textview_background"
-                    android:text="14:00"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" /> <!-- Añadir margen inferior para separación -->
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/textview_background"
-                    android:text="15:00"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" /> <!-- Añadir margen inferior para separación -->
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/textview_background"
-                    android:text="16:00"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" /> <!-- Añadir margen inferior para separación -->
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/textview_background"
-                    android:text="17:00"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" /> <!-- Añadir margen inferior para separación -->
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/textview_background"
-                    android:text="18:00"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" /> <!-- Añadir margen inferior para separación -->
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/textview_background"
-                    android:text="19:00"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" /> <!-- Añadir margen inferior para separación -->
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/textview_background"
-                    android:text="20:00"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" /> <!-- Añadir margen inferior para separación -->
-            </LinearLayout>
-
-            <!-- Columna de eventos -->
-            <LinearLayout
-                android:id="@+id/eventLinearLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_toEndOf="@id/hourLinearLayout"
-
-                android:orientation="vertical">
-
-                <!-- Agregar eventos aquí -->
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/textview_background"
-                    android:text="Evento 1"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" /> <!-- Añadir margen inferior para separación -->
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/textview_background"
-                    android:text="Evento 2"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp" /> <!-- Añadir margen inferior para separación -->
-
-                <!-- Agregar más eventos aquí -->
-            </LinearLayout>
-        </RelativeLayout>
+        <LinearLayout
+            android:id="@+id/eventLinearLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"></LinearLayout>
     </ScrollView>
 
     <Button
@@ -328,6 +192,6 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hourScrollView" />
+        app:layout_constraintTop_toBottomOf="@+id/eventScrollView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
