--- a/app/src/main/res/layout/activity_cancelar_inscripcion.xml
+++ b/app/src/main/res/layout/activity_cancelar_inscripcion.xml
@@ -178,4 +178,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonCalificar" />
 
+    <Button
+        android:id="@+id/buttonVerQR"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
+        android:text="Código QR"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonCancelarIns" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
