--- a/app/src/main/res/layout/activity_gestionar_actividad.xml
+++ b/app/src/main/res/layout/activity_gestionar_actividad.xml
@@ -86,18 +86,28 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewHoraF" />
 
-        <EditText
-            android:id="@+id/editTextCantidad"
-            android:layout_width="350dp"
-            android:layout_height="50dp"
+        <TextView
+            android:id="@+id/textViewEventos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:hint="Cantidad"
-            android:inputType="number"
+            android:layout_marginEnd="289dp"
+            android:text="Evento"
             android:textColor="#FFFFFF"
-            android:textColorHint="#FFFFFF"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/spinnerHoraF" />
+
+        <Spinner
+            android:id="@+id/spinnerEventos"
+            android:layout_width="350dp"
+            android:layout_height="50dp"
+            android:prompt="@string/choose_time"
+            android:background="@drawable/spinner_background"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewEventos" />
 
         <EditText
             android:id="@+id/editTextUbicacion"
@@ -110,7 +120,7 @@
             android:textColorHint="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextCantidad" />
+            app:layout_constraintTop_toBottomOf="@+id/spinnerEventos" />
 
         <EditText
             android:id="@+id/editTextDescripcion"
