--- a/app/src/main/res/layout/activity_consultar_actividades.xml
+++ b/app/src/main/res/layout/activity_consultar_actividades.xml
@@ -11,7 +11,6 @@
         android:id="@+id/btn_AgregarColaboradores"
         android:layout_width="166dp"
         android:layout_height="59dp"
-        android:layout_marginStart="120dp"
         android:layout_marginTop="536dp"
         android:background="@drawable/round_button_background"
         android:backgroundTint="@color/white"
@@ -20,6 +19,7 @@
         android:textAlignment="center"
         android:textColor="@color/purple_700"
         android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,7 +27,6 @@
         android:id="@+id/btn_GestionarActividad"
         android:layout_width="166dp"
         android:layout_height="59dp"
-        android:layout_marginStart="120dp"
         android:layout_marginTop="456dp"
         android:background="@drawable/round_button_background"
         android:backgroundTint="@color/white"
@@ -36,6 +35,7 @@
         android:textAlignment="center"
         android:textColor="@color/purple_700"
         android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,10 +43,10 @@
         android:id="@+id/imageView9"
         android:layout_width="355dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="32dp"
         android:layout_marginBottom="415dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtListarEventos"
         app:srcCompat="@android:drawable/screen_background_light" />
 
@@ -54,9 +54,10 @@
         android:id="@+id/spinnerlListaActividades"
         android:layout_width="351dp"
         android:layout_height="66dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="240dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="248dp"
         android:entries="@array/Vacio_array"
+        app:layout_constraintEnd_toStartOf="@+id/parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -65,7 +66,6 @@
         android:layout_width="393dp"
         android:layout_height="0dp"
         android:layout_marginTop="171dp"
-        android:layout_marginEnd="37dp"
         android:layout_marginBottom="23dp"
         android:fontFamily="sans-serif-medium"
         android:text="Lista de Activiades:"
@@ -75,7 +75,6 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/imageView9"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.253" />
@@ -84,7 +83,6 @@
         android:id="@+id/txtConsultarActividades"
         android:layout_width="336dp"
         android:layout_height="51dp"
-        android:layout_marginEnd="37dp"
         android:fontFamily="sans-serif-medium"
         android:text="Consultar Actividades"
         android:textAlignment="center"
@@ -93,7 +91,6 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.973"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.076" />
