--- a/app/src/main/res/layout/activity_consultar_actividades.xml
+++ b/app/src/main/res/layout/activity_consultar_actividades.xml
@@ -67,7 +67,7 @@
         android:layout_marginTop="171dp"
         android:layout_marginBottom="23dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Lista de Activiades:"
+        android:text="Lista de Actividades:"
         android:textAlignment="center"
         android:textColor="#F6F6F6"
         android:textSize="34sp"
