--- a/app/src/main/res/layout/activity_buscar_colaborador.xml
+++ b/app/src/main/res/layout/activity_buscar_colaborador.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,7 +13,7 @@
         android:layout_width="152dp"
         android:layout_height="53dp"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="572dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/round_button_background"
         android:backgroundTint="@color/white"
         android:fontFamily="sans-serif-medium"
@@ -20,15 +21,17 @@
         android:textAlignment="center"
         android:textColor="@color/purple_700"
         android:textSize="14sp"
+        app:layout_constraintEnd_toStartOf="@+id/btn_Editar"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/scrollCub" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_Editar"
         android:layout_width="152dp"
         android:layout_height="53dp"
         android:layout_marginStart="220dp"
-        android:layout_marginTop="572dp"
+        android:layout_marginTop="552dp"
         android:background="@drawable/round_button_background"
         android:backgroundTint="@color/white"
         android:fontFamily="sans-serif-medium"
@@ -36,6 +39,8 @@
         android:textAlignment="center"
         android:textColor="@color/purple_700"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@+id/scrollCub"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,8 +48,6 @@
         android:id="@+id/texto22"
         android:layout_width="318dp"
         android:layout_height="41dp"
-        android:layout_marginEnd="37dp"
-        android:layout_marginBottom="580dp"
         android:fontFamily="sans-serif-medium"
         android:text="Buscar colaborador"
         android:textAlignment="center"
@@ -53,54 +56,41 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.964"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.13" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/idCarnetColab2"
+        android:id="@+id/idCarnetColab"
         android:layout_width="334dp"
         android:layout_height="52dp"
-        android:layout_marginBottom="224dp"
+        android:layout_marginTop="92dp"
         android:backgroundTint="#F6F6F6"
-        android:inputType="text"
+        android:inputType="number"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
-        android:text="Carnet"
+        android:hint="Carnet"
         android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.547" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_Buscar"
-        android:layout_width="152dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="316dp"
-        android:background="@drawable/round_button_background"
-        android:backgroundTint="@color/white"
-        android:fontFamily="sans-serif-medium"
-        android:text="Buscar"
-        android:textAlignment="center"
-        android:textColor="@color/purple_700"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/texto22" />
 
     <ScrollView
         android:id="@+id/scrollCub"
         android:layout_width="340dp"
         android:layout_height="147dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginBottom="10dp"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_Buscar">
+        app:layout_constraintTop_toBottomOf="@+id/btn_Buscar"
+        app:layout_constraintBottom_toTopOf="@+id/btn_Eliminar">
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -111,7 +101,7 @@
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="290dp"
-                android:layout_height="34dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="225dp"
@@ -121,5 +111,21 @@
                 android:textSize="18sp" />
         </LinearLayout>
     </ScrollView>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_Buscar"
+        android:layout_width="152dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="128dp"
+        android:background="@drawable/round_button_background"
+        android:backgroundTint="@color/white"
+        android:fontFamily="sans-serif-medium"
+        android:text="Buscar"
+        android:textAlignment="center"
+        android:textColor="@color/purple_700"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/idCarnetColab" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
