--- a/app/src/main/res/layout/activity_lobby_estudiantes_admin.xml
+++ b/app/src/main/res/layout/activity_lobby_estudiantes_admin.xml
@@ -12,7 +12,7 @@
         android:layout_width="258dp"
         android:layout_height="63dp"
         android:layout_marginStart="76dp"
-        android:layout_marginTop="312dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/round_button_background"
         android:backgroundTint="@color/white"
         android:fontFamily="sans-serif-medium"
@@ -21,14 +21,14 @@
         android:textColor="@color/purple_700"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/texto2" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_InscripciónEventos"
         android:layout_width="258dp"
         android:layout_height="63dp"
         android:layout_marginStart="76dp"
-        android:layout_marginTop="396dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/round_button_background"
         android:backgroundTint="@color/white"
         android:fontFamily="sans-serif-medium"
@@ -37,14 +37,14 @@
         android:textColor="@color/purple_700"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_RegistrarEstudiante" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_CalendarioEventos"
         android:layout_width="258dp"
         android:layout_height="63dp"
         android:layout_marginStart="76dp"
-        android:layout_marginTop="480dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/round_button_background"
         android:backgroundTint="@color/white"
         android:fontFamily="sans-serif-medium"
@@ -53,14 +53,14 @@
         android:textColor="@color/purple_700"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_InscripciónEventos" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_GestionarEstudiantes"
         android:layout_width="258dp"
         android:layout_height="63dp"
         android:layout_marginStart="76dp"
-        android:layout_marginTop="564dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/round_button_background"
         android:backgroundTint="@color/white"
         android:fontFamily="sans-serif-medium"
@@ -69,7 +69,39 @@
         android:textColor="@color/purple_700"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_CalendarioEventos" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_Asociaciones"
+        android:layout_width="258dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/round_button_background"
+        android:backgroundTint="@color/white"
+        android:fontFamily="sans-serif-medium"
+        android:text="Asociaciones"
+        android:textAlignment="center"
+        android:textColor="@color/purple_700"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_GestionarEstudiantes" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_Colaboradores"
+        android:layout_width="258dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/round_button_background"
+        android:backgroundTint="@color/white"
+        android:fontFamily="sans-serif-medium"
+        android:text="Colaboradores"
+        android:textAlignment="center"
+        android:textColor="@color/purple_700"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_Asociaciones" />
 
     <TextView
         android:id="@+id/texto2"
@@ -86,15 +118,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.973"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.297" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.059" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="143dp"
         android:layout_height="111dp"
-        android:layout_marginBottom="580dp"
+        android:layout_marginEnd="132dp"
+        android:layout_marginBottom="588dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:srcCompat="@drawable/logo"
-        tools:layout_editor_absoluteX="134dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/logo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
