--- a/app/src/main/res/layout/activity_editar_colaborador.xml
+++ b/app/src/main/res/layout/activity_editar_colaborador.xml
@@ -17,16 +17,16 @@
             android:id="@+id/btn_Editar"
             android:layout_width="152dp"
             android:layout_height="53dp"
-            android:layout_marginTop="128dp"
+            android:layout_marginTop="108dp"
             android:background="@drawable/round_button_background"
             android:backgroundTint="@color/white"
             android:fontFamily="sans-serif-medium"
-            android:text="Editar"
+            android:text="Actualizar"
             android:textAlignment="center"
             android:textColor="@color/purple_700"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@+id/spinnerSedeColab"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.853"
             app:layout_constraintStart_toEndOf="@+id/btn_Cancelar"
             app:layout_constraintTop_toBottomOf="@+id/DescripcionColab" />
 
@@ -145,7 +145,7 @@
             android:id="@+id/Apellido2"
             android:layout_width="334dp"
             android:layout_height="52dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="36dp"
             android:backgroundTint="#F6F6F6"
             android:hint="Segundo apellido"
@@ -156,7 +156,7 @@
             android:textColorHint="#FFFFFF"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.606"
+            app:layout_constraintHorizontal_bias="0.616"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Apellido1" />
 
@@ -202,13 +202,13 @@
             android:id="@+id/textViewSede"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="39dp"
+            android:layout_marginTop="28dp"
             android:text="Sede:"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/btn_Guardar"
             app:layout_constraintEnd_toStartOf="@+id/spinnerSedeColab"
-            app:layout_constraintHorizontal_bias="0.672"
+            app:layout_constraintHorizontal_bias="0.878"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/DescripcionColab"
             app:layout_constraintVertical_bias="0.215" />
@@ -217,16 +217,15 @@
             android:id="@+id/spinnerSedeColab"
             android:layout_width="271dp"
             android:layout_height="52dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/spinner_background"
+            android:contentDescription="Selecciona la sede del colaborador"
             android:textColor="#FFFFFF"
-            app:layout_constraintBottom_toTopOf="@+id/btn_Guardar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.75"
+            app:layout_constraintEnd_toEndOf="@+id/CarreraColab"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/DescripcionColab"
-            app:layout_constraintVertical_bias="0.339"
-            android:contentDescription="Selecciona la sede del colaborador"/>
+            app:layout_constraintVertical_bias="0.339" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
