--- a/app/src/main/res/layout/activity_lobby_colaboradores.xml
+++ b/app/src/main/res/layout/activity_lobby_colaboradores.xml
@@ -62,9 +62,10 @@
         android:id="@+id/imageView2"
         android:layout_width="143dp"
         android:layout_height="111dp"
-        android:layout_marginBottom="580dp"
+        android:layout_marginEnd="132dp"
+        android:layout_marginBottom="584dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:srcCompat="@drawable/logo"
-        tools:layout_editor_absoluteX="134dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
