--- a/app/src/main/res/layout/activity_foro.xml
+++ b/app/src/main/res/layout/activity_foro.xml
@@ -29,7 +29,7 @@
         android:id="@+id/questionListView"
         android:layout_width="390dp"
         android:layout_height="671dp"
-        android:background="#009688"
+        android:background="#1E03A9F4"
         app:layout_constraintBottom_toTopOf="@+id/postButton"
         app:layout_constraintEnd_toEndOf="parent" />
 
