--- a/app/src/main/res/layout/activity_asignar_colaborador.xml
+++ b/app/src/main/res/layout/activity_asignar_colaborador.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AsignarColaborador"
-    android:background="@drawable/backgroundmain">
+    android:background="@drawable/backgroundmain"
+    tools:context=".AsignarColaborador">
 
     <TextView
         android:id="@+id/texto22"
