--- a/app/src/main/res/layout/activity_lobby_estudiantes.xml
+++ b/app/src/main/res/layout/activity_lobby_estudiantes.xml
@@ -11,7 +11,6 @@
         android:id="@+id/btn_InscripcionEventos"
         android:layout_width="185dp"
         android:layout_height="60dp"
-        android:layout_marginStart="112dp"
         android:layout_marginTop="320dp"
         android:background="@drawable/round_button_background"
         android:backgroundTint="@color/white"
@@ -20,6 +19,7 @@
         android:textAlignment="center"
         android:textColor="@color/purple_700"
         android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,7 +27,6 @@
         android:id="@+id/btn_MisEventos"
         android:layout_width="185dp"
         android:layout_height="60dp"
-        android:layout_marginStart="112dp"
         android:layout_marginTop="492dp"
         android:background="@drawable/round_button_background"
         android:backgroundTint="@color/white"
@@ -36,6 +35,7 @@
         android:textAlignment="center"
         android:textColor="@color/purple_700"
         android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,7 +43,6 @@
         android:id="@+id/btn_CalendarioDeEventos2"
         android:layout_width="185dp"
         android:layout_height="60dp"
-        android:layout_marginStart="112dp"
         android:layout_marginTop="408dp"
         android:background="@drawable/round_button_background"
         android:backgroundTint="@color/white"
@@ -52,6 +51,7 @@
         android:textAlignment="center"
         android:textColor="@color/purple_700"
         android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -59,10 +59,12 @@
         android:id="@+id/imageView"
         android:layout_width="77dp"
         android:layout_height="67dp"
+        android:layout_marginStart="74dp"
         android:layout_marginEnd="260dp"
         android:layout_marginBottom="600dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/logo" />
 
     <TextView
@@ -87,7 +89,6 @@
         android:id="@+id/texto25"
         android:layout_width="217dp"
         android:layout_height="47dp"
-        android:layout_marginEnd="37dp"
         android:fontFamily="sans-serif-medium"
         android:text="Estudiantes"
         android:textAlignment="center"
@@ -96,8 +97,23 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.617"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.285" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_Comunicaciones"
+        android:layout_width="185dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="575dp"
+        android:background="@drawable/round_button_background"
+        android:backgroundTint="@color/white"
+        android:fontFamily="sans-serif-medium"
+        android:text="Comunicaciones"
+        android:textAlignment="center"
+        android:textColor="@color/purple_700"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
