--- a/app/src/main/res/layout/activity_mis_eventos.xml
+++ b/app/src/main/res/layout/activity_mis_eventos.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:text="Mis eventos"
+        android:text="Inscripción a Eventos"
         android:textColor="#FFFFFF"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
